{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 127,
  "lineage": "537c59b8-15a1-f8d0-9aa4-428b9f9d0bf0",
  "resources": [
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866273138898:internet-gateway/igw-07e2041e0d36e5c81",
            "id": "igw-07e2041e0d36e5c81",
            "owner_id": "866273138898",
            "tags": {
              "Name": "my_gateway"
            },
            "tags_all": {
              "Name": "my_gateway"
            },
            "vpc_id": "vpc-0a8d9faccecf76c47"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866273138898:vpc/vpc-0a8d9faccecf76c47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078c9e7d4b9f5ecdf",
            "default_route_table_id": "rtb-0fe5b9c119dcc1aa6",
            "default_security_group_id": "sg-05beb973e047ffdcd",
            "dhcp_options_id": "dopt-0ccb75ff4c38b2ff5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8d9faccecf76c47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe5b9c119dcc1aa6",
            "owner_id": "866273138898",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e613773405d8e6aa",
            "association_id": "eipassoc-048694019204d7462",
            "domain": "vpc",
            "id": "eipalloc-0e613773405d8e6aa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a13254c6b35220fc",
            "private_dns": "ip-10-0-0-143.ec2.internal",
            "private_ip": "10.0.0.143",
            "public_dns": "ec2-35-170-117-179.compute-1.amazonaws.com",
            "public_ip": "35.170.117.179",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e613773405d8e6aa",
            "connectivity_type": "public",
            "id": "nat-0d1e35989a66a21c6",
            "network_interface_id": "eni-0a13254c6b35220fc",
            "private_ip": "10.0.0.143",
            "public_ip": "35.170.117.179",
            "subnet_id": "subnet-03c77373a808b6675",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.main.aws_vpc.main",
            "module.nat.aws_eip.nat_eip",
            "module.subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.pub_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:866273138898:instance/i-0410f0f1353fc3f5f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0410f0f1353fc3f5f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03aa567123e7b76d6",
            "private_dns": "ip-10-0-0-222.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.222",
            "public_ip": "44.214.105.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fe94895621de7616",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c77373a808b6675",
            "tags": {
              "Name": "public-instance"
            },
            "tags_all": {
              "Name": "public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2208d51fce7e091"
            ]
          },
          "dependencies": [
            "module.main.aws_vpc.main",
            "module.securityGroup.aws_security_group.sec-group",
            "module.subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866273138898:security-group/sg-0e2208d51fce7e091",
            "description": "security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2208d51fce7e091",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security_group",
            "name_prefix": "",
            "owner_id": "866273138898",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8d9faccecf76c47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d91cc9cac580a5251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d1e35989a66a21c6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d91cc9cac580a525",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.main.aws_vpc.main",
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat",
            "module.subnet.aws_route_table.private",
            "module.subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07e2041e0d36e5c81",
            "id": "r-rtb-06587b2aca49cf7eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06587b2aca49cf7eb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.main.aws_vpc.main",
            "module.subnet.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866273138898:route-table/rtb-0d91cc9cac580a525",
            "id": "rtb-0d91cc9cac580a525",
            "owner_id": "866273138898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d1e35989a66a21c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8d9faccecf76c47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866273138898:route-table/rtb-06587b2aca49cf7eb",
            "id": "rtb-06587b2aca49cf7eb",
            "owner_id": "866273138898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e2041e0d36e5c81",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8d9faccecf76c47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0697d579f9da149cd",
            "route_table_id": "rtb-0d91cc9cac580a525",
            "subnet_id": "subnet-0c790b7d070971b06"
          },
          "dependencies": [
            "module.main.aws_vpc.main",
            "module.subnet.aws_route_table.private",
            "module.subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db6ffa43ace7a079",
            "route_table_id": "rtb-0d91cc9cac580a525",
            "subnet_id": "subnet-021923eb1c8b58636"
          },
          "dependencies": [
            "module.main.aws_vpc.main",
            "module.subnet.aws_route_table.private",
            "module.subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f3d41d8a2473cd0",
            "route_table_id": "rtb-06587b2aca49cf7eb",
            "subnet_id": "subnet-03c77373a808b6675"
          },
          "dependencies": [
            "module.main.aws_vpc.main",
            "module.subnet.aws_route_table.public",
            "module.subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0529ad8e74409a763",
            "route_table_id": "rtb-06587b2aca49cf7eb",
            "subnet_id": "subnet-08c6fa4d4ec7cc922"
          },
          "dependencies": [
            "module.main.aws_vpc.main",
            "module.subnet.aws_route_table.public",
            "module.subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866273138898:subnet/subnet-0c790b7d070971b06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c790b7d070971b06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866273138898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0a8d9faccecf76c47"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        },
        {
          "index_key": "private2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866273138898:subnet/subnet-021923eb1c8b58636",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021923eb1c8b58636",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866273138898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-0a8d9faccecf76c47"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        },
        {
          "index_key": "public1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866273138898:subnet/subnet-03c77373a808b6675",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c77373a808b6675",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866273138898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0a8d9faccecf76c47"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        },
        {
          "index_key": "public2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866273138898:subnet/subnet-08c6fa4d4ec7cc922",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c6fa4d4ec7cc922",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866273138898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-0a8d9faccecf76c47"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}